[package]
name = "audio-waveform"
description = "WebAssembly module for generating audio waveforms"
repository = "https://github.com/hypersnob/audio-waveform"
license-file = "LICENSE.md"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
symphonia = { version = "0.5.3", features = ["mp3", "aac", "ogg", "vorbis"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Used for error handling in WASM
console_error_panic_hook = "0.1.7"
base64 = "0.22.1"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]
wee_alloc = ["dep:wee_alloc"]
